04-public_ip_lb.tf
resource "azurerm_public_ip" "lb_public_ip" {
  name                = "lbPublicIP"
  resource_group_name = azurerm_resource_group.rg.name
  location            = azurerm_resource_group.rg.location
  allocation_method   = "Static"
  sku                 = "Standard"
}
