11-network_disk.tf
resource "azurerm_subnet" "disk_subnet" {
  name                 = "diskSubnet"
  resource_group_name  = azurerm_resource_group.rg.name
  virtual_network_name = azurerm_virtual_network.vnet.name
  address_prefixes     = ["10.0.3.0/24"]
}
